# fastapi-tasks

./: .pre-commit-config.yaml  README.md  mkdocs.yml  netlify.toml  pyproject.toml
.github/workflows/: test.yml
docs/: contributing.md  index.md  license.md
docs/api/: error_handlers.md  task_config.md  task_scheduler.md  tasks.md  utilities.md
docs/faq/: faq.md
docs/learn/background_tasks/: general.md  timing_modes.md
docs/learn/tutorial_advanced/: error_handling.md  real_world_examples.md  task_shielding.md
docs/learn/tutorial_user_guide/: first_steps.md  scheduling_tasks.md  sync_async.md  task_configuration.md  timing_control.md
fastapi_tasks/: __init__.py  _dependencies.py  _excs.py  _tasks.py  _utils.py  dependencies.py  tasks.py  utils.py
tests/: conftest.py  test_dependencies.py  test_global_config.py  test_smoke.py  test_tasks.py  test_utils.py  utils.py
